[exifGUI]-feat: updated GUI view

--- a/exifGUI/gui.ui
+++ b/exifGUI/gui.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>705</width>
+    <width>674</width>
     <height>563</height>
    </rect>
   </property>
@@ -41,10 +41,23 @@
        </layout>
       </item>
       <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
        <widget class="QTableWidget" name="table">
         <property name="minimumSize">
          <size>
-          <width>300</width>
+          <width>500</width>
           <height>500</height>
          </size>
         </property>
@@ -65,7 +78,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>705</width>
+     <width>674</width>
      <height>22</height>
     </rect>
    </property>
