--- a/exifGUI/gui.ui
+++ b/exifGUI/gui.ui
@@ -6,17 +6,37 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>674</width>
+    <width>696</width>
     <height>563</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Exif GUI</string>
+   <string>ExifGUI</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>icon/icons8-odata-100.png</normaloff>icon/icons8-odata-100.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <spacer name="horizontalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::MinimumExpanding</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>10</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
@@ -45,9 +65,12 @@
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>40</width>
+          <width>20</width>
           <height>20</height>
          </size>
         </property>
@@ -63,13 +86,29 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>1000</width>
+          <width>800</width>
           <height>700</height>
          </size>
         </property>
        </widget>
       </item>
      </layout>
+    </item>
+    <item row="0" column="1">
+     <spacer name="horizontalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::MinimumExpanding</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>10</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
     </item>
    </layout>
   </widget>
@@ -78,12 +117,93 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>674</width>
+     <width>696</width>
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menu_help">
+    <property name="title">
+     <string>Pomoc</string>
+    </property>
+    <addaction name="action_help_extensions"/>
+    <addaction name="action_help_about"/>
+   </widget>
+   <widget class="QMenu" name="menu_theme">
+    <property name="title">
+     <string>Wygląd</string>
+    </property>
+    <widget class="QMenu" name="menu_theme_table">
+     <property name="title">
+      <string>Tabela</string>
+     </property>
+     <addaction name="action_theme_table_choose_font_color"/>
+     <addaction name="separator"/>
+     <addaction name="action_theme_table_font_hacker_green"/>
+     <addaction name="action_theme_table_font_white"/>
+    </widget>
+    <addaction name="menu_theme_table"/>
+   </widget>
+   <widget class="QMenu" name="menuPlik">
+    <property name="title">
+     <string>Plik</string>
+    </property>
+    <addaction name="action_file_choose_file"/>
+   </widget>
+   <addaction name="menuPlik"/>
+   <addaction name="menu_theme"/>
+   <addaction name="menu_help"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionInformacje">
+   <property name="text">
+    <string>Informacje</string>
+   </property>
+  </action>
+  <action name="action_help_about">
+   <property name="text">
+    <string>O programie</string>
+   </property>
+  </action>
+  <action name="action_theme">
+   <property name="text">
+    <string>Motyw</string>
+   </property>
+  </action>
+  <action name="action_theme_font_color">
+   <property name="text">
+    <string>Kolor czcionki</string>
+   </property>
+  </action>
+  <action name="action_file_choose_file">
+   <property name="text">
+    <string>Wybierz plik</string>
+   </property>
+  </action>
+  <action name="action_help_extensions">
+   <property name="text">
+    <string>Obsługiwane rozszerzenia</string>
+   </property>
+  </action>
+  <action name="actionk">
+   <property name="text">
+    <string>k</string>
+   </property>
+  </action>
+  <action name="action_theme_table_choose_font_color">
+   <property name="text">
+    <string>Wybierz kolor</string>
+   </property>
+  </action>
+  <action name="action_theme_table_font_hacker_green">
+   <property name="text">
+    <string>Hakerski zielony</string>
+   </property>
+  </action>
+  <action name="action_theme_table_font_white">
+   <property name="text">
+    <string>Biały</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
